fixed modal boz from having width cut off

--- a/ctfo_client/src/Components/styles/HomePage.css
+++ b/ctfo_client/src/Components/styles/HomePage.css
@@ -130,9 +130,11 @@ h1 {
 }
 
 .ReactModal__Content {
-  width: 100%;
+  width: auto;
   height: auto;
 }
+
+
 
 /* mediaQueries */
 @media only screen
